# CS554FinalProject

./: .gitignore  CMakeLists.txt  README.md
learnply/: icVector.H  learnply.cpp  learnply_io.h  ply.c  ply.h  polyhedron.cpp  polyhedron.h  tmatrix.cpp  trackball.cpp
tempmodels/: coarse_bunny.ply  coarse_dragon.ply  coarse_feline.ply  coarse_happy.ply  coarse_torus.ply  fine_bunny.ply  fine_dragon.ply  fine_feline.ply  fine_torus.ply
